--- a/web.new/public/locales/de/routes.guildmodlog.json
+++ b/web.new/public/locales/de/routes.guildmodlog.json
@@ -2,5 +2,6 @@
   "reports": "Meldungen",
   "unbanrequests": "Entbannungsanträge",
   "noreports": "Yay, deine Guild hat aktuell keine Meldungen! 🥳",
-  "nounbanrequests": "Es wurden bis jetzt keien Entbannungsanträge eingereicht."
+  "nounbanrequests": "Es wurden bis jetzt keien Entbannungsanträge eingereicht.",
+  "loadmore": "Mehr laden ..."
 }
