add theme selector

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -37,7 +37,8 @@
         "apitoken": "API Token",
         "ota": "OTA",
         "privacy": "Privacy",
-        "language": "Language"
+        "language": "Language",
+        "theme": "Theme"
       }
     }
   },
