add accent color picker

--- a/web.new/public/locales/en-US/routes.usersettings.theme.json
+++ b/web.new/public/locales/en-US/routes.usersettings.theme.json
@@ -6,5 +6,9 @@
     "light": "Flashbang",
     "dark": "Developer Mode",
     "system": "System"
+  },
+  "accent": {
+    "heading": "Accent Color",
+    "reset": "Reset"
   }
 }
