--- a/web/public/locales/en-US/routes.login.json
+++ b/web/public/locales/en-US/routes.login.json
@@ -1,11 +1,11 @@
 {
   "discord": {
-    "title": "Either log in with your Discord Account via OAuth2",
+    "title": "Either log in with your Discord account via OAuth2 ...",
     "action": "Login with Discord",
-    "subline": "We don't store your E-Mail mail address or anything else and just verify your ID."
+    "subline": "We neither store your E-Mail address nor anything else and just verify your Discord ID."
   },
   "alternative": {
-    "title": "Or DM the following Code to shinpuru on Discord",
+    "title": "... or send the following code via direct message to shinpuru.",
     "subline": "Alternatively, you can also use the <1>/login</1> command."
   }
 }
