--- a/web/public/locales/de/routes.member.json
+++ b/web/public/locales/de/routes.member.json
@@ -1,6 +1,6 @@
 {
   "isbot": "Dieser Nutzer ist ein Bot-Account.",
-  "isyou": "Hey, das sind Sie! 👀",
+  "isyou": "Hey, das bist Du! 👀",
   "info": {
     "heading": "Generelle Nutzerinformationen",
     "guild-joined": "Guild beigetreten",
