--- a/web/public/locales/de/routes.guildsettings.data.json
+++ b/web/public/locales/de/routes.guildsettings.data.json
@@ -1,11 +1,11 @@
 {
   "heading": "Daten",
-  "explanation": "Hier kannst du ALLE daten löschen, welche in der Datenbank und in dem Object-Storage von shinpuru gespeichert sind mit deiner Guild verbunden sind. Das beinhält die folgenden Daten:\n\n- **Alle Meldungen und dazugehörige Bilder**\n- **Alle Backups und dazugehörige Daten**\n- **Karma-Punkte, -Regeln, -Einstellungen und -Blocklisten**\n- Alle Einträge im Starboard und diesbezügliche Einstellungen\n- Alle Guild-Logeinträge\n- Guild-Einstellungen\n- Berechtigungseinstellungen\n- Tags\n- Antiraid Einstellungen und Logs\n- Entbannungsanträge\n\n*Diese Aktion kann nur ein mal alle 24 Stunden ausgeführt werden.*",
+  "explanation": "Hier kannst Du ALLE daten löschen, welche in der Datenbank und in dem Object-Storage von shinpuru gespeichert und mit deiner Guild verbunden sind. Das beinhaltet die folgenden Daten:\n\n- **Alle Meldungen und dazugehörige Bilder**\n- **Alle Backups und dazugehörige Daten**\n- **Karma-Punkte, -Regeln, -Einstellungen und -Blocklisten**\n- Alle Einträge im Starboard und diesbezügliche Einstellungen\n- Alle Guild-Logeinträge\n- Guild-Einstellungen\n- Berechtigungseinstellungen\n- Tags\n- Antiraid-Einstellungen und Logs\n- Entbannungsanträge\n\n*Diese Aktion kann nur ein mal alle 24 Stunden ausgeführt werden.*",
   "delete": "Alle Guild-Daten permanent löschen",
   "remove": "Entferne den Bot von der Guild nach dem löschen",
   "modal": {
     "heading": "Alle Guild-Daten löschen",
-    "content": "Bitte bestätige, dass du wirklich <1>alle</1> Guild-Daten, welche vorher erwähnt wurden, permanent löschen möchtest indem du den Namen der Guild unten einträgst und auf 'Bestätigen' klickst."
+    "content": "Bitte bestätige, dass Du wirklich <1>alle</1> Guild-Daten, welche vorher erwähnt wurden, permanent löschen möchtest, indem du den Namen der Guild unten einträgst und auf 'Bestätigen' klickst."
   },
   "notifications": {
     "success": "Guild-Daten wurden erfolgreich entfernt."
