--- a/web/public/locales/de/routes.guildsettings.karma.json
+++ b/web/public/locales/de/routes.guildsettings.karma.json
@@ -13,7 +13,7 @@
   },
   "emotes": {
     "heading": "Emoticons",
-    "description": "Die Emoticons, mit welchen Nutzer reagieren können um Karma zu verteilen.",
+    "description": "Die Emoticons, mit welchen Nutzer reagieren können, um Karma zu verteilen.",
     "increase": "Karma erhöhen",
     "decrease": "Karma veringern"
   },
