--- a/web/public/locales/de/routes.guildstarboard.json
+++ b/web/public/locales/de/routes.guildstarboard.json
@@ -5,5 +5,5 @@
     "top": "Meiste Sterne zuerst"
   },
   "loadmore": "Mehr laden...",
-  "empty": "Hm, hier passiert noch nichts...<br />Hast du das Starboard schon eingerichtet? Wenn nicht, benutze den Befehl <code>/starboard</code>, um dies zu tun."
+  "empty": "Hm, hier passiert noch nichts...<br />Hast Du das Starboard schon eingerichtet? Wenn nicht, benutze den Befehl <code>/starboard</code>, um dies zu tun."
 }
