--- a/web/public/locales/de/routes.usersettings.theme.json
+++ b/web/public/locales/de/routes.usersettings.theme.json
@@ -1,6 +1,6 @@
 {
   "heading": "Thema",
-  "explanation": "Hier kannst du das Aussehen der Weboberfläche für dich anpassen.",
+  "explanation": "Hier kannst Du das Aussehen der Weboberfläche für dich anpassen.",
   "scheme": {
     "heading": "Farbschema",
     "light": "Blendgranate",
