--- a/web/public/locales/de/components.json
+++ b/web/public/locales/de/components.json
@@ -40,11 +40,11 @@
   "modalrevokereport": {
     "heading": "Meldung widerrufen",
     "description": {
-      "kick": "Bitte gib an, warum du diese Meldung widerrufst.",
-      "ban": "Bitte gib an, warum du diesen Ban widerrufst. Diese Aktion entfernt auch den Nutzer von der Ban-Liste der Guild.",
-      "mute": "Bitte gib an, warum du diese Stummschaltung widerrufst. Diese Aktion hebt auch die Stummschaltung auf.",
-      "warn": "Bitte gib an, warum du diese Meldung widerrufst.",
-      "ad": "Bitte gib an, warum du diese Meldung widerrufst."
+      "kick": "Bitte gib an, warum Du diese Meldung widerrufst.",
+      "ban": "Bitte gib an, warum Du diesen Ban widerrufst. Diese Aktion entfernt auch den Nutzer von der Ban-Liste der Guild.",
+      "mute": "Bitte gib an, warum Du diese Stummschaltung widerrufst. Diese Aktion hebt auch die Stummschaltung auf.",
+      "warn": "Bitte gib an, warum Du diese Meldung widerrufst.",
+      "ad": "Bitte gib an, warum Du diese Meldung widerrufst."
     },
     "controls": {
       "cancel": "Abbrechen",
@@ -92,7 +92,7 @@
   "modalunbanrequest": {
     "heading": "Entbannungsantrag Erstellen",
     "sub": "Erstelle einen Entbannungsantrag für die Guild <1>{{guildname}}</1>.",
-    "description": "Bitte beschreibe detailliert wieso Du auf der Guild entbannt werden solltest.",
+    "description": "Bitte beschreibe detailliert, wieso Du auf der Guild entbannt werden solltest.",
     "controls": {
       "cancel": "Abbrechen",
       "send": "Absenden"
