--- a/web/public/locales/de/routes.guildsettings.api.json
+++ b/web/public/locales/de/routes.guildsettings.api.json
@@ -8,7 +8,7 @@
     "enable": "Guild API aktivieren",
     "allowedorigins": {
       "heading": "Zugelassene Origins",
-      "description": "Eine Kommaseparierte Liste von Herkunfts-URLs, die in der API-Antwort über den <1>Access-Control-Allow-Origin</1>-Header gesetzt werden. Das bedeutet, dass die Informationen, die von dieser API angefragt werden, nur in einem Browser von einer Website abgerufen kann, die eine dieser URLs hat. Ist hier nichts gesetzt, wird <2>*</2> als Wert für den Header genutzt, was jeder Website erlaub, auf diese Ressource zuzugreifen."
+      "description": "Eine Kommaseparierte Liste von Herkunfts-URLs, die in der API-Antwort über den <1>Access-Control-Allow-Origin</1>-Header gesetzt werden. Das bedeutet, dass die Informationen, die von dieser API angefragt werden, nur in einem Browser von einer Website abgerufen kann, die eine dieser URLs hat. Ist hier nichts gesetzt, wird <2>*</2> als Wert für den Header genutzt, was jeder Website erlaubt, auf diese Ressource zuzugreifen."
     },
     "token": {
       "heading": "Zugriffstoken",
