--- a/web/public/locales/de/routes.usersettings.ota.json
+++ b/web/public/locales/de/routes.usersettings.ota.json
@@ -1,6 +1,6 @@
 {
   "heading": "Einmalanmeldung (OTA)",
-  "explanation": "OTA (One Time Authentication) erlaubt es dir, dich mit generierten Einmalpasswörtern einzuloggen, bspw. durch den <code>/login</code>-Befehl. OTA ist aus Sicherheitgründen standardmäßig deaktiviert. <1>Hier</1> kannst Du mehr darüber lesen, wie OTA in shinpuru funktioniert.",
+  "explanation": "OTA (One Time Authentication) erlaubt es Dir, Dich mit generierten Einmalpasswörtern einzuloggen, bspw. durch den <code>/login</code>-Befehl. OTA ist aus Sicherheitgründen standardmäßig deaktiviert. <1>Hier</1> kannst Du mehr darüber lesen, wie OTA in shinpuru funktioniert.",
   "toggle": "OTA aktivieren",
   "save": "Einstellungen speichern",
   "notifications": {
