--- a/web/public/locales/de/components.json
+++ b/web/public/locales/de/components.json
@@ -156,7 +156,7 @@
     "back": "Zurück zum Dashboard",
     "section": {
       "default": {
-        "general": "Generelle Infos",
+        "general": "Allgemeine Informationen",
         "commands": "Befehle",
         "system": "Systeminformationen"
       }
