--- a/web/public/locales/de/components.json
+++ b/web/public/locales/de/components.json
@@ -42,7 +42,7 @@
     "description": {
       "kick": "Bitte gib an, warum Du diese Meldung widerrufst.",
       "ban": "Bitte gib an, warum Du diesen Ban widerrufst. Diese Aktion entfernt auch den Nutzer von der Ban-Liste des Servers.",
-      "mute": "Bitte gib an, warum Du diese Stummschaltung widerrufst. Diese Aktion hebt auch die Stummschaltung auf.",
+      "mute": "Bitte gib an, warum Du diese Stummschaltung widerrufst. Diese Aktion hebt auch die Stummschaltung in dem Server auf.",
       "warn": "Bitte gib an, warum Du diese Meldung widerrufst.",
       "ad": "Bitte gib an, warum Du diese Meldung widerrufst."
     },
