--- a/web/public/locales/de/routes.guildsettings.antiraid.json
+++ b/web/public/locales/de/routes.guildsettings.antiraid.json
@@ -2,7 +2,7 @@
   "heading": "Antiraid-Einstellungen",
   "notifications": {
     "saved": "Einstellungen gespeichert.",
-    "kicked": "{{count}} Nutzer wurden gekickt!",
+    "kicked": "{{count}} Mitglieder wurden gekickt!",
     "banned": "{{count}} Nutzer wurden gebannt!"
   },
   "explanation": "Das Antiraid-System beobachtet im Hintergrund die Häufigkeit, mit welcher neue Nutzer deinem Server beitreten, abhängig von den unten angegebenen Werten. Übersteigt die Häufigkeit diese Werte, wird die Server-Verifizierungsstufe auf \"Höchstes\" gestellt und alle neu beitretenden Mitglieder werden in die Liste unten aufgenommen. Zusätzlich werden alle Mitglieder mit Administratorrechten des Servers per Direktnachricht informiert.",
